--- a/src/stylesheets/polygon.css
+++ b/src/stylesheets/polygon.css
@@ -1,3 +1,20 @@
-.polygon {
-
-} 
+/* .polygon {
+    background-color: #63639c;
+    position: relative;
+    width: 54px;
+    box-sizing: content-box;
+    border-width: 50px 18px 0;
+    border-style: solid;
+    border-color: red transparent;
+}
+.polygon::before {
+    content: "";
+      position: absolute;
+      height: 0;
+      width: 0;
+      top: -85px;
+      left: -18px;
+      border-width: 0 45px 35px;
+      border-style: solid;
+      border-color: transparent transparent red;
+} */
