--- a/src/stylesheets/game.css
+++ b/src/stylesheets/game.css
@@ -18,3 +18,10 @@
 .card {
     cursor: pointer;
 }
+.character-info {
+    background-color: rgba(128, 128, 128, 0.226);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
