--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -6,6 +6,10 @@
     padding: 0;
     margin: 0;
     background-color: #1f1f22;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 * {
 box-sizing: border-box;
